-------------------
from 0.9.2 to 0.9.3
-------------------

- add compatibility with MathComp 2.4.0 (with Coq 8.20)

-------------------
from 0.9.1 to 0.9.2
-------------------

* changed:
- renamed
  + neg_RV -> opp_RV
	+ trans_min_RV -> trans_sub_RV
	+ seq.seq -> seq
- in probability/proba.v
  + split operations into sections according to their types of values:
    random_variables, zmod_random_variables, ring_random_variables,
    and real_random_variables
  + notation "X '`/' n" is changed from (1 / n%:R) to (n%:R^-1)

* added
- in probability/proba.v
  + lemma bij_RV_unif, bij_comp_RV, neg_RV_unif, trans_RV_unif

-------------------
from 0.9.0 to 0.9.1
-------------------

* fix the extraction in ldpc_algo.v

-------------------
from 0.7.7 to 0.9.0
-------------------

* changed:
- almost no stdlib anymore
  (just using Coq's reals for interval in robustmean)

* added:
- in bigop_ext.v
  + lemmas morphs_oppr, morph_mulRDr, bigmax_le_seq, bigmax_leP_seq,
           bigmax_gt0P_seq, big_union_nondisj
- in derive_ext.v
  + lemmas open_norm_subball,
           near_eq_derive, near_eq_derivable, near_eq_is_derive
- in realType_ext.v
  + lemmas wpmulr_lgt0, wpmulr_rgt0
- in ssr_ext.v
  + lemma eqW
  + setY* (symmetric difference for finite sets), notation: "A :*: B"

* removed:
- chap2 scopes, chap2.v

-------------------
from 0.7.6 to 0.7.7
-------------------

- compatibility with HB 1.8.0

-------------------
from 0.7.5 to 0.7.6
-------------------

- compatibility with MathComp 2.3.0

-------------------
from 0.7.4 to 0.7.5
-------------------

- compatibility with MathComp-Analysis 1.7.0 only

-------------------
from 0.7.3 to 0.7.4
-------------------

- minor memory optimization

-------------------
from 0.7.2 to 0.7.3
-------------------
* added:
- in ssralg_ext.v
  + lemmas mulr_regl, mulr_regr
- in realType_ext.v
  + lemmas x_x2_eq, x_x2_max, x_x2_pos, x_x2_nneg, expR1_gt2
- new file derive_ext.v
  + lemmas differentiable_{ln, Log}